--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1218,14 +1218,6 @@ input:checked + .toggle-bg {
   margin-top: 2rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .block {
   display: block;
 }
@@ -1314,6 +1306,10 @@ input:checked + .toggle-bg {
   width: 2.5rem;
 }
 
+.w-2\/4 {
+  width: 50%;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -1356,18 +1352,6 @@ input:checked + .toggle-bg {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .max-w-screen-xl {
@@ -1422,6 +1406,40 @@ input:checked + .toggle-bg {
 
 .transform-none {
   transform: none;
+}
+
+@keyframes jump-in {
+  0% {
+    transform: scale(0%);
+  }
+
+  80% {
+    transform: scale(120%);
+  }
+
+  100% {
+    transform: scale(100%);
+  }
+}
+
+.animate-jump-in {
+  animation: jump-in .5s both;
+}
+
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-up {
+  animation: fade-up 1s both;
 }
 
 .cursor-default {
@@ -1990,6 +2008,18 @@ input:checked + .toggle-bg {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.animate-delay-100 {
+  animation-delay: 100ms;
+}
+
+.animate-duration-\[5000ms\] {
+  animation-duration: 5000ms;
+}
+
+.animate-infinite {
+  animation-iteration-count: infinite;
 }
 
 .hover\:border-gray-300:hover {
