--- a/src/css/output.css
+++ b/src/css/output.css
@@ -2371,6 +2371,10 @@ input:checked + .toggle-bg {
     margin-top: 10rem;
   }
 
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
   .md\:flex {
     display: flex;
   }
